--- a/style.css
+++ b/style.css
@@ -7,21 +7,18 @@ body {
   font-family: "Lato", sans-serif;
 }
 
-.center {
-  padding-left: calc(50%-800px);
-  padding-right: calc(50%-800px);
-}
 .conteiner {
   width: 1140px;
   margin: 0 auto;
+  background-color: antiquewhite;
 }
 
 .header {
+  height: 75px;
   background-color: #222;
 }
 
 .header_box {
-  height: 75px;
   padding: 16px;
   display: flex;
   justify-content: space-between;
@@ -47,7 +44,6 @@ body {
 .top_heading {
   color: #222;
   font-size: 48px;
-  font-style: normal;
   font-weight: 900;
   line-height: normal;
 }
@@ -55,7 +51,6 @@ body {
 .top_text {
   color: #222222;
   font-size: 32px;
-  font-style: normal;
   font-weight: 700;
   line-height: normal;
 }
@@ -63,6 +58,11 @@ body {
 .item {
   display: flex;
   align-items: center;
+}
+
+.top-item1 {
+  width: 800px;
+  height: 764px;
 }
 
 .item-flex {
@@ -80,7 +80,6 @@ body {
   position: absolute;
   top: 105px;
   font-size: 16px;
-  font-style: normal;
   font-weight: 400;
   line-height: normal;
 }
@@ -91,7 +90,6 @@ body {
   position: absolute;
   top: 125px;
   font-size: 24px;
-  font-style: normal;
   font-weight: 700;
   line-height: normal;
 }
@@ -102,7 +100,6 @@ body {
   position: absolute;
   top: 65px;
   font-size: 16px;
-  font-style: normal;
   font-weight: 700;
   line-height: normal;
 }
@@ -148,32 +145,8 @@ body {
   line-height: normal;
 }
 
-h4 {
-  color: #222;
-  font-family: Lato;
-  font-size: 30px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-}
-
-.card_box {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  max-inline-size: 1140px;
-  margin-inline: auto;
-  margin-bottom: 48px;
-}
-
 .card {
   width: 360px;
-}
-
-.footer {
-  height: 100px;
-  background-color: #cccccc;
-  margin-top: 150px;
 }
 
 .poduct_text {
@@ -201,19 +174,26 @@ h4 {
 .price {
   color: #f16d7f;
   font-size: 16px;
-  font-style: normal;
   font-weight: 400;
-  line-height: normal;
   padding-top: 16px;
 }
 
-@media (min-width: 768px) and (max-width: 1024px) {
-  .center {
-    padding-left: calc(50%-378px);
-    padding-right: calc(50%-378px);
-  }
+@media screen and (max-width: 1024px) {
   .conteiner {
-    background-color: aqua;
     width: 1024px;
+  }
+  .header_menu {
+    padding-right: 41px;
+  }
+  .top_heading {
+    font-size: 44px;
+  }
+
+  .top_text {
+    font-size: 24px;
+  }
+  .top-item1 {
+    width: 386px;
+    height: 368px;
   }
 }
